[package]
name = "rust-kaiyo-stream-ext"
authors = ["Josh 'NeverCast' L. <j.nevercast@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "OBS Studio webview for Kaiyotech"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
axum = { version = "0.6.1", features = ["http1", "json", "matched-path", "tokio", "tower-log", "ws"] }
clap = { version = "4.0.32", features = ["derive"] }
futures-util = "0.3.25"
hyper = "0.14.23"
redis = { version = "0.22.1", features = ["tokio-comp"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
